<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    tools:context=".cliente" >

    <TextView
        android:id="@+id/CREA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="CREATU BEBIDA"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/ir_beb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/CREA"
        android:layout_alignTop="@+id/ir_beb4"
        android:layout_marginTop="-76dp"
        android:layout_marginRight="20sp"
        android:background="@drawable/botonbeb"
        android:elevation="5sp"
        android:text="@string/bebida1"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ir_beb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ir_beb5"
        android:layout_below="@+id/textView4"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="66dp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="30dp"
        android:layout_toEndOf="@+id/ir_beb1"
        android:layout_toRightOf="@+id/ir_beb1"
        android:background="@drawable/botonbeb"
        android:elevation="5sp"
        android:text="@string/bebida2"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ir_beb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ir_beb6"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:layout_marginBottom="30sp"
        android:layout_toEndOf="@+id/ir_beb2"
        android:layout_toRightOf="@+id/ir_beb2"
        android:background="@drawable/botonbeb"
        android:elevation="5sp"
        android:text="@string/bebida3"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ir_beb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="299dp"
        android:background="@drawable/botonbeb"
        android:elevation="5sp"
        android:text="@string/bebida4"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ir_beb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="30sp"
        android:layout_marginBottom="301dp"
        android:layout_toEndOf="@+id/ir_beb1"
        android:layout_toRightOf="@+id/ir_beb1"
        android:background="@drawable/botonbeb"
        android:elevation="5sp"
        android:text="@string/bebida5"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/ir_beb6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="299dp"
        android:layout_toEndOf="@+id/ir_beb5"
        android:layout_toRightOf="@+id/ir_beb5"
        android:background="@drawable/botonbeb"
        android:elevation="5sp"
        android:text="@string/bebida6"
        android:textColor="#fff"
        android:textSize="16sp"
        tools:visibility="visible" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CREA"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="92dp"
        android:layout_marginLeft="92dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="92dp"
        android:layout_marginRight="92dp"
        android:text="MIXED DRINKS"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/White" />
</RelativeLayout>