<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="USUARIO">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="374dp"
            android:layout_height="217dp"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="BIENVENIDO A XAMAN BAR"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/colorPrimaryDark" />


        <EditText
            android:id="@+id/et_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/input"
            android:hint="@string/ingresar_usuario"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"
            android:textColorHint="#ccc" />

        <EditText
            android:id="@+id/et_contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="10sp"
            android:background="@drawable/input"
            android:hint="@string/contraseña"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="10sp"
            android:paddingRight="10sp"
            android:paddingBottom="10sp"
            android:textColorHint="#ccc" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginBottom="30sp"
            android:background="@drawable/btn_iniciar"
            android:elevation="5sp"
            android:onClick="iniciarsesionButton"
            android:text="Iniciar sesion"
            android:textColor="#fff"
            android:textSize="16sp" />


    </LinearLayout>
</RelativeLayout>